# DevBox

./: .gitattributes  .gitignore  README.md  ReleaseNote  build-profile.json5  local.properties  oh-package.json5  使用指导.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: layered_image.json
entry/: .gitignore  build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  terminal.cpp
entry/src/main/cpp/types/entry/: oh-package.json5
entry/src/main/ets/about_diaglog/: Constants.ets  about.ets  opensource_info.ets  opensource_list.ets
entry/src/main/ets/common/: Constants.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  about.ets  command_manual.ets  hex_convert.ets  icon_button.ets  manual_data.ets  qrcode_builder.ets  sys_color.ets  sys_media.ets  sys_string.ets  sys_symbol.ets  terminal.ets  texteditor.ets  timestamp.ets  unicode_converter.ets
entry/src/main/ets/utils/: DevBoxUtils.ets  Logger.ets
entry/src/main/resources/rawfile/: _opensource.html  about_vim_opensource.html  (+34 more)
entry/src/ohosTest/: module.json5
hnp/arm64-v8a/: autoconf.hnp  bash.hnp  bison.hnp  busybox.hnp  bzip2.hnp  cflow.hnp  diff.hnp  expat.hnp  find.hnp  flex.hnp  gdb.hnp  gperf.hnp  grep.hnp  groff.hnp  gzip.hnp  hdc.hnp  hnpcli.hnp  less.hnp  libxml2.hnp  libxslt.hnp  llvm.hnp  lz4.hnp  m4.hnp  make.hnp  ninja.hnp  pcre2.hnp  sign-tool.hnp  tree.hnp
hvigor/: hvigor-config.json5
(+63 files in other folders)
